--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.26.0",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
